bug 754452 - use GDI synthetic italic rather than cairo font matrix when it's safe to do so, for better glyph spacing. r=jdaggett